--- a/manifest.json
+++ b/manifest.json
@@ -11,16 +11,28 @@
   "prefer_related_applications": false,
   "icons": [
     {
-      "src": "/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
-      "src": "/icon-512.png",
+      "src": "icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable"
+    },
+    {
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    },
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ],
   "categories": ["education", "utilities"],
@@ -32,15 +44,13 @@
       "name": "Semestr Bal",
       "short_name": "Semestr",
       "description": "Semestr balını hesablayın",
-      "url": "/?calculator=semester",
-      "icons": []
+      "url": "/?calculator=semester"
     },
     {
       "name": "ÜOMG",
       "short_name": "ÜOMG",
       "description": "ÜOMG hesablayın",
-      "url": "/?calculator=uomg",
-      "icons": []
+      "url": "/?calculator=uomg"
     }
   ]
 }
